2007-03-31  Elijah Newren  <newren gmail com>

	Clean up event mask handling and meta_create_offscreen_window, to
	prevent nasty metacity/gdk interactions causing hangs. See #354213.

	* src/screen.[ch] (meta_create_offscreen_window):
	* src/display.c (meta_display_open):
	* src/screen.c (meta_screen_new):
	Add a valuemask parameter to meta_create_offscreen_window
	
	* src/display.c (meta_display_open):
	make it explicit that we can't rely on PropertyNotify events for
	the leader_window due to nasty metacity/gdk interaction

	* src/session.c (warn_about_lame_clients_and_finish_interact):
	remove cut-and-paste code for timestamp pinging and just call
	meta_display_get_current_time_roundtrip

2007-03-30  Elijah Newren  <newren gmail com>

	* src/display.c (meta_display_open,
	  meta_display_get_current_time_roundtrip):
	* src/display.h (struct _MetaDisplay):
	create a dedicated timestamp pinging window instead of reusing
	display->leader_window; see bug 354213 comments 24-30

2007-03-12  Elijah Newren  <newren gmail com>

	* configure.in: post-release version bump to 2.18.1

2007-03-12  Elijah Newren  <newren gmail com>

	* NEWS:
	* README:
	* configure.in:
	2.18.0 release

2007-02-26  Thomas Thurman  <thomas@thurman.org.uk>

        * configure.in: post-release bump to 2.17.13.

2007-02-26  Thomas Thurman  <thomas@thurman.org.uk>

        * src/prefs.h: same as most recent entry on this branch.

2007-02-21  Thomas Thurman  <thomas@thurman.org.uk>

        * src/common.h, src/frames.c, src/prefs.c: back out
	last patch from Linus because it belongs in trunk and
	not the 2.18 branch. (My fault for applying it in the
	wrong place.)

2007-02-20  Kjartan Maraas  <kmaraas@gnome.org>

	* Makefile.am: Add MAINTAINERS to EXTRA_DIST so others
	can find out where to send patches. Hi Linus :-)

2007-02-17  Linus Torvalds  <torvalds@woody.linux-foundation.org>

        * src/common.h (MetaActionTitleBar): renamed from
	MetaActionDoubleClickTitleBar; added _LOWER and _MENU.