@@ -1,3 +1,13 @@
+2007-04-03  Elijah Newren  <newren gmail com>
+
+	Avoid some crashes when dragging windows partially offscreen.
+	Possible (or at least partial) fix for #353513.
+
+	* src/edge-resistance.c (apply_edge_resistance): be more careful
+	about calls to find_index_of_edge_near_position() returning
+	possibly invalid indices.  Also, add a warning comment to
+	find_index_of_edge_near_position().
+
 2007-03-31  Elijah Newren  <newren gmail com>
 
 	Clean up event mask handling and meta_create_offscreen_window, to
